examples/test/testpolicy2695.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2695
  namespace: namespace488
spec:
  podSelector:
    matchLabels:
      key16: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value19
          key10: value23
      podSelector:
        matchLabels:
          key38: value30
          key37: value44
          key13: value7
